Responsive design edits

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
                     <span style="color: white;" class="tagline">I Build Secure Web & Mobile Applications</span>
                 </h1>
             </div>
-
         </div>
     </div>
 
@@ -198,7 +197,7 @@
         </div>
     </div>
 
-    <!-- -----------------------potfolio------------------------- -->
+    <!-- -----------------------portfolio------------------------- -->
 
     <div id="portfolio">
         <div class="container">
@@ -271,9 +270,7 @@
 
                     <p>
                         <i class="fa-solid fa-paper-plane"></i>
-                        <a class="contact-links" href="mailto:abdulmuhsintiyumbashirazu@gmail.com">
-                            abdulmuhsintiyumbashirazu@gmail.com
-                        </a>
+                        <a class="contact-links" href="mailto:abdulmuhsintiyumbashirazu@gmail.com">abdulmuhsintiyumbas@gmail.com</a>
                     </p>
 
                     <p>
