--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         </div>
     </div>
 
-    <!-- -----------------------portfolio------------------------- -->
+    <!-- -----------------------my work------------------------- -->
 
     <div id="portfolio">
         <div class="container">
