--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <p class="logo"><span class="logo_M">M</span>uhsin.</p>
+                <p class="logo"><span class="logo_M">m</span>uhsin.dev</p>
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
