--- a/index.html
+++ b/index.html
@@ -75,24 +75,29 @@
 
                 <div class="about-contents active-content" id="skills">
                     <ul>
-                        <li><span class="skill-type">Web Development</span>
-                            <p class="skill-details">React, Node.js, Express, Spring Boot</p>
+                        <li>
+                            <span>Web Development</span>
+                            <p >React, Node.js, Express, Spring Boot</p>
                         </li>
 
-                        <li><span class="skill-type">Mobile Development</span>
-                            <p class="skill-details">Flutter & Dart Cross-Platform Apps</p>
+                        <li>
+                            <span>Mobile Development</span>
+                            <p>Flutter & Dart Cross-Platform Apps</p>
                         </li>
 
-                        <li><span class="skill-type">Backend Engineering</span>
-                            <p class="skill-details">REST APIs, Microservices, MySQL, MongoDB</p>
+                        <li>
+                            <span>Backend Engineering</span>
+                            <p>REST APIs, Microservices, MySQL, MongoDB</p>
                         </li>
 
-                        <li><span class="skill-type">Application Security</span>
-                            <p class="skill-details">OWASP Top 10, Secure Coding, Pentesting Basics</p>
+                        <li>
+                            <span>Application Security</span>
+                            <p>OWASP Top 10, Secure Coding, Pentesting Basics</p>
                         </li>
 
-                        <li><span class="skill-type">DevOps & Tools</span>
-                            <p class="skill-details">Docker, Git, Linux</p>
+                        <li>
+                            <span>DevOps & Tools</span>
+                            <p>Docker, Git, Linux</p>
                         </li>
 
                     </ul>
@@ -101,21 +106,28 @@
                 <div class="about-contents" id="experience">
                     <ul>
                         <li>
-                            <span class="experience-title">Full-Stack Food Delivery Platform</span>
-                            Designing and developing a complete food ordering system using React, Node.js, MongoDB, and
-                            Stripe integration.
+                            <span>Full-Stack Food Delivery Platform</span>
+                            <p>
+                                Designing and developing a complete food ordering system using React, Node.js, MongoDB,
+                                and Stripe integration.
+                            </p>
                         </li>
 
                         <li>
-                            <span class="experience-title">Phone Validation Microservice System</span>
-                            Built a Dockerized microservice-based application for validating and registering phone
-                            numbers with REST APIs and MySQL.
+                            <span >Phone Validation Microservice System</span>
+                            <p>
+                                Built a Dockerized microservice-based application for validating and registering phone
+                                numbers with REST APIs and MySQL.
+                            </p>
                         </li>
 
                         <li>
-                            <span class="experience-title">Global Time & Weather Mobile App</span>
-                            Developed a Flutter mobile application that fetches real-time world time and weather data
-                            using external APIs.
+                            <span>Global Time & Weather Mobile App</span>
+                            <p>
+                                Developed a Flutter mobile application that fetches real-time world time and weather
+                                data
+                                using external APIs.
+                            </p>
                         </li>
                     </ul>
                 </div>
@@ -124,20 +136,20 @@
                 <div class="about-contents" id="education">
                     <ul>
                         <li>
-                            <span class="edu-year">2023 - 2027</span>
-                            <p class="edu-school">Konya Technical University</p>
+                            <span>2023 - 2027</span>
+                            <p style="font-weight: 900;">Konya Technical University</p>
                             <p>BSc Software Engineering</p>
                         </li>
 
                         <li>
-                            <span class="edu-year">2022 - 2023</span>
-                            <p class="edu-school">Kwame Nkrumah University of Science and Technology</p>
+                            <span>2022 - 2023</span>
+                            <p style="font-weight: 900;">Kwame Nkrumah University of Science and Technology</p>
                             <p>Computer Science</p>
                         </li>
 
                         <li>
-                            <span class="edu-year">2018 - 2021</span>
-                            <p class="edu-school">Tamale Senior High School</p>
+                            <span>2018 - 2021</span>
+                            <p style="font-weight: 900;">Tamale Senior High School</p>
                             <p>General Science</p>
                         </li>
 
@@ -267,7 +279,6 @@
 
                 <div class="left">
                     <h1 class="sub-title">Contact Me</h1>
-
                     <p>
                         <i class="fa-solid fa-paper-plane"></i>
                         <a class="contact-links" href="mailto:abdulmuhsintiyumbashirazu@gmail.com">abdulmuhsintiyumbas@gmail.com</a>
