Finished responsive design

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     <div id="header">
         <div class="container">
             <nav>
-                <p class="logo"><span class="logo_M">m</span>uhsin.<span class="logo_M">dev</span></p>
+                <p class="logo">
+                    <a href="abdulmuhsin-portfolio.vercel.app">
+                        <span class="logo_M">m</span>uhsin.<span class="logo_M">dev</span>
+                    </a>
+                </p>
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -41,7 +45,7 @@
             <h1 class="sub-title">About Me</h1>
             <div class="row">
                 <div class="about-1">
-                    <img src="images/cover.jpg" alt="about-img">
+                    <img src="images/cover_1.jpg" alt="about-img">
                 </div>
 
                 <div class="about-2">
@@ -77,7 +81,7 @@
                     <ul>
                         <li>
                             <span>Web Development</span>
-                            <p >React, Node.js, Express, Spring Boot</p>
+                            <p>React, Node.js, Express, Spring Boot</p>
                         </li>
 
                         <li>
@@ -114,7 +118,7 @@
                         </li>
 
                         <li>
-                            <span >Phone Validation Microservice System</span>
+                            <span>Phone Validation Microservice System</span>
                             <p>
                                 Built a Dockerized microservice-based application for validating and registering phone
                                 numbers with REST APIs and MySQL.
@@ -281,7 +285,8 @@
                     <h1 class="sub-title">Contact Me</h1>
                     <p>
                         <i class="fa-solid fa-paper-plane"></i>
-                        <a class="contact-links" href="mailto:abdulmuhsintiyumbashirazu@gmail.com">abdulmuhsintiyumbas@gmail.com</a>
+                        <a class="contact-links"
+                            href="mailto:abdulmuhsintiyumbashirazu@gmail.com">abdulmuhsintiyumbas@gmail.com</a>
                     </p>
 
                     <p>
