Added Final touches and deployed

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My personal web site</title>
+    <meta name="description"
+        content="Abdul-Muhsin Shirazu - Frontend Developer specializing in responsive and modern web design.">
+    <meta name="keywords" content="Frontend Developer, Web Developer, Portfolio, HTML, CSS, JavaScript">
+    <meta name="author" content="Abdul-Muhsin Shirazu">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <title>Abdul-Muhsin | Software Engineer</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/786c801aac.js" crossorigin="anonymous"></script>
 </head>
