--- a/index.html
+++ b/index.html
@@ -4,11 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Abdul-Muhsin Shirazu - Frontend Developer specializing in responsive and modern web design.">
-    <meta name="keywords" content="Frontend Developer, Web Developer, Portfolio, HTML, CSS, JavaScript">
-    <meta name="author" content="Abdul-Muhsin Shirazu">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Abdul-Muhsin Shirazu | Software Engineer">
+    <meta property="og:description" content="Software Engineer specializing in Web and Mobile App development.">
+    <meta property="og:url" content="https://abdulmuhsin-portfolio.vercel.app/">
+    <meta property="og:image" content="https://abdulmuhsin-portfolio.vercel.app/preview.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Abdul-Muhsin Shirazu | Software Engineer">
+    <meta name="twitter:description" content="Software Engineer specializing in Web and Mobile App development.">
+    <meta name="twitter:image" content="https://abdulmuhsin-portfolio.vercel.app/images/preview.png">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+
     <title>Abdul-Muhsin | Software Engineer</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/786c801aac.js" crossorigin="anonymous"></script>
