Added social preview image

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Abdul-Muhsin Shirazu | Software Engineer">
     <meta name="twitter:description" content="Software Engineer specializing in Web and Mobile App development.">
-    <meta name="twitter:image" content="https://abdulmuhsin-portfolio.vercel.app/images/preview.png">
+    <meta name="twitter:image" content="https://abdulmuhsin-portfolio.vercel.app/preview.png">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
     <title>Abdul-Muhsin | Software Engineer</title>
