Added social preview image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Abdul-Muhsin Shirazu | Software Engineer">
     <meta property="og:description" content="Software Engineer specializing in Web and Mobile App development.">
     <meta property="og:url" content="https://abdulmuhsin-portfolio.vercel.app/">
-    <meta property="og:image" content="https://abdulmuhsin-portfolio.vercel.app/preview.jpg">
+    <meta property="og:image" content="https://abdulmuhsin-portfolio.vercel.app/preview_2.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
 
@@ -18,7 +18,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Abdul-Muhsin Shirazu | Software Engineer">
     <meta name="twitter:description" content="Software Engineer specializing in Web and Mobile App development.">
-    <meta name="twitter:image" content="https://abdulmuhsin-portfolio.vercel.app/preview.png">
+    <meta name="twitter:image" content="https://abdulmuhsin-portfolio.vercel.app/preview_2.png">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
     <title>Abdul-Muhsin | Software Engineer</title>
