Added social preview image

--- a/index.html
+++ b/index.html
@@ -5,22 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Open Graph -->
+    <!-- HTML Meta Tags -->
+    <title>Abdul-Muhsin Shirazu | Software Engineer</title>
+    <meta name="description" content="Software Engineer specializing in Web and Mobile App development.">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://abdulmuhsin-portfolio.vercel.app/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Abdul-Muhsin Shirazu | Software Engineer">
     <meta property="og:description" content="Software Engineer specializing in Web and Mobile App development.">
-    <meta property="og:url" content="https://abdulmuhsin-portfolio.vercel.app/">
-    <meta property="og:image" content="https://abdulmuhsin-portfolio.vercel.app/preview_2.jpg">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
+    <meta property="og:image" content="https://abdulmuhsin-portfolio.vercel.app/preview.png">
 
-    <!-- Twitter -->
+    <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="abdulmuhsin-portfolio.vercel.app">
+    <meta property="twitter:url" content="https://abdulmuhsin-portfolio.vercel.app/">
     <meta name="twitter:title" content="Abdul-Muhsin Shirazu | Software Engineer">
     <meta name="twitter:description" content="Software Engineer specializing in Web and Mobile App development.">
-    <meta name="twitter:image" content="https://abdulmuhsin-portfolio.vercel.app/preview_2.png">
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <meta name="twitter:image" content="https://abdulmuhsin-portfolio.vercel.app/preview.png">
 
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
+    <!-- NOTE: You selected a new image. Please upload it to your server and replace "YOUR_IMAGE_URL_HERE" with the actual URL. -->
     <title>Abdul-Muhsin | Software Engineer</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/786c801aac.js" crossorigin="anonymous"></script>
