--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Abdul-Muhsin Shirazu | Software Engineer">
     <meta property="og:description" content="Software Engineer specializing in Web and Mobile App development.">
-    <meta property="og:image" content="https://abdulmuhsin-portfolio.vercel.app/preview_3.png">
+    <meta property="og:image" content="https://abdulmuhsin-portfolio.vercel.app/preview_.png">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
@@ -22,7 +22,7 @@
     <meta property="twitter:url" content="https://abdulmuhsin-portfolio.vercel.app/">
     <meta name="twitter:title" content="Abdul-Muhsin Shirazu | Software Engineer">
     <meta name="twitter:description" content="Software Engineer specializing in Web and Mobile App development.">
-    <meta name="twitter:image" content="https://abdulmuhsin-portfolio.vercel.app/preview_3.png">
+    <meta name="twitter:image" content="https://abdulmuhsin-portfolio.vercel.app/preview_2.png">
 
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
