--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
                         <li>
                             <span>Application Security</span>
-                            <p>OWASP Top 10, Secure Coding, Pentesting Basics</p>
+                            <p>OWASP Top 10, Secure Coding, Pentesting</p>
                         </li>
 
                         <li>
